# tl2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile2  LICENSE  Makefile  README.md  clickhouse.compose.yml  dev.docker-compose.yml  dev.sh  docker-compose.dev.yml  docker-compose.yml  flake.nix  rustfmt.toml  shell.nix  stack.docker-compose.yml  test-usernames.sql
.cargo/: config.toml
benches/: orl_parsing_benchmark.rs
config/: default.json  default.yml  development.yml  docker.json  docker.yml
experiments/clickhouse/: count-full-days.sql
experiments/sqlite/: test-usernames.sql
src/: alerts.rs  events.rs  lib.rs  main.rs  orl_file_parser.rs  orl_line_parser.rs  run_scrape_ingester.rs  settings.rs  sqlite_pool.rs
src/adapters/: clickhouse.rs  console.rs  console_metrics.rs  elasticsearch.rs  file.rs  mod.rs  username_tracker.rs
src/adapters/clickhouse/: messages_table.rs  mod.rs  user_notices_table.rs
src/formats/: mod.rs  orl.rs  unified.rs
src/scrapers/: mod.rs
src/scrapers/dgg/: mod.rs  scraper.rs
src/scrapers/dgg/events/: broadcast.rs  join.rs  message.rs  mod.rs  moderation.rs  names.rs  quit.rs
src/scrapers/dgg/events/shared/: user.rs
src/scrapers/twitch/: events.rs  mod.rs
src/scripts/: file_to_clickhouse.rs  file_to_elasticsearch.rs  file_to_sqlite.rs  mod.rs
src/sinks/: mod.rs
src/sinks/avro/: mod.rs
src/sinks/clickhouse_bulk/: mod.rs
src/sinks/elasticsearch_bulk/: mod.rs
src/sinks/jsonl/: messages.rs  mod.rs
src/sinks/sqlite/: messages.rs
src/sources/: mod.rs
src/sources/jsonl/: mod.rs
src/sources/orl/: line_parser.rs  mod.rs  orl_file_parser.rs  orl_line_parser.rs  parse_timestamp.rs
workbench/: Cargo.toml
