[package]
name = "tl2"
version = "0.1.0"
authors = ["johnpyp <johnpyp.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["serde"] }
clickhouse = "0.8.1"
colored = "2.0.0"
config = "0.11.0"
derive_more = "0.99.16"
elasticsearch = "7.14.0-alpha.1"
enum_dispatch = "0.3.7"
env_logger = "0.9.0"
futures = "0.3.17"
httparse = "1.5.1"
humantime = "2.1.0"
log = "0.4.14"
lru = "0.6.6"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.67"
strum = { version = "0.21.0", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
twitch-irc = { version = "3.0.1", features = ["transport-ws-rustls-webpki-roots"] }
voca_rs = "1.13.1"
